traversal.snake.Snake.scala.error
Compilation error:
Snake:12: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur) {
      ^Snake:17: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur) {
      ^