traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  while (!fin) {
    explorer()
  }
}

def fin(): Boolean = {
  if (estFaceMur) {
    if (getDirection() == Direction.EST) {
      gauche()
      if (estFaceMur) {
        return true
      }
    } else if (getDirection() == Direction.OUEST) {
      droite()
      if (estFaceMur) {
        return true
      }
    } else {
      return false
    }
  } else {
    return false
  }
}

def explorer() {
  if (!estFaceMur) {
    avance()
  } else if (getDirection() == Direction.EST) {
    gauche() ; avance() ; gauche()
  } else {
    droite() ; avance() ; droite()
  }
}